--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html>
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>Progate</title>
+    <title>Waribashi Cooking</title>
   </head>
   <body>
-    <h1 class="title">HTML & CSS の開発環境を用意しよう！</h1>
-    <p>自分のPCでWebページを開発する方法を学習しましょう</p>
+    <div class="header">
+      <div class="header-logo">
+        <h1>わり端日記</h1>
+      </div>
+    </div>
+    <div class="main">
+      <div class="copy-container">
+        <h2>自己紹介</h2>
+        <p>はじめまして、わり端クックの端と申します😍</p>
+        <p>現在は、立命館大学に通う大学一回生です😉おそらく僕のアカウントをフォローしてくださっている方のほとんどが大学生かと思いますが、忙しい大学生活のなか、自炊をすることは非常に大変かと思います。</p>
+        <p>かく言う僕もつい三ヶ月前までは、一切自炊をしませんでした（笑）</p>
+        <p>理由は、以下の3つ</p>
+        <p>①うまく材料を消費できない</p>
+        <p>②ついつい予算オーバーしてしまう</p>
+        <p>③他のことで忙しくて、料理に時間を割いていられない</p>
+
+        <p>おそらく皆さんもこのような悩みを抱えているかと思います<(_ _)></p>
+        <p>ひょっとしたら、こうした理由で自炊を止めている方が多いのではないでしょうか？あるいは、そもそも自炊する意味が分からない方もいるかもしれません。</p>
+        <p><span>しかし</span>自炊をすることには次のメリットがあります。</p>
+        <p>①ルーティーン化させることで、生活習慣が身につく</p>
+        <p>②時間管理ができる</p>
+        <p>③節約することができる</p>
+        <p>この他にも、栄養のバランスの取れた食事を心がけることで、自信の健康管理ができるようになり、その結果僕は、今では<span>体脂肪率8.5%</span>の体を維持することが出来ています🔥</p>
+        <p>このホームページでは、主にこうした僕の普段心がけている食事や生活習慣、おすすめの節約術を教えたいと思います。</p>
+      </div>
+    </div>
   </body>
 </html>
